<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/etEmailLogin"
            style="@style/LoginEditTextStyle"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/etPasswordLogin"
            style="@style/LoginEditTextStyle"
            android:hint="@string/password"
            android:inputType="textPassword" />


<!--        <TextView-->
<!--            android:id="@+id/btnRememberMe"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="20dp"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:drawableLeft="@drawable/check_box_unchecked"-->
<!--            android:drawablePadding="20dp"-->
<!--            android:fontFamily="@font/sf_compact_text_regular"-->
<!--            android:text="@string/remember_me"-->
<!--            android:textColor="@color/font"-->
<!--            android:textSize="14dp"-->
<!--            android:visibility="gone" />-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp">

            <RelativeLayout
                android:id="@+id/btnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/your_ride_cancel"
                    style="@style/button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorWhite" />
            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp">


            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:padding="10dp"
                android:text="@string/register_tv"
                android:textColor="@color/colorPrimary"
                android:textSize="14dp" />
        </RelativeLayout>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/llProgress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:elevation="5dp"
            android:padding="5dp" />
    </RelativeLayout>


</RelativeLayout>