<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.RegisterFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/rlImage"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp">
                        <ImageView
                            android:id="@+id/ivDp"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/dp"/>
                        <ImageView
                            android:id="@+id/ivCamera"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/camera"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            />
                    </RelativeLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/RegisterTextViewStyle"
                                android:text="@string/name"
                                />

                            <EditText
                                style="@style/RegisterEditTextStyle"
                                android:id="@+id/etName"
                                android:hint="@string/app_name"/>
                        </LinearLayout>
                        <ImageView
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/line"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/RegisterTextViewStyle"
                                android:text="@string/email"
                                android:textColor="@color/colorPrimary"/>

                            <EditText
                                android:id="@+id/etEmail"
                                style="@style/RegisterEditTextStyle"
                                android:hint="sqlnest@example.com"
                                android:inputType="textEmailAddress"/>
                        </LinearLayout>
                        <ImageView
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/line"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/RegisterTextViewStyle"
                                android:text="@string/password"
                                />

                            <EditText
                                style="@style/RegisterEditTextStyle"
                                android:id="@+id/etPassword"
                                android:inputType="textPassword"
                                android:hint="example"
                                />
                        </LinearLayout>
                        <ImageView
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/line"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/RegisterTextViewStyle"
                                android:text="@string/re_enter_password"
                                />

                            <EditText
                                style="@style/RegisterEditTextStyle"
                                android:id="@+id/etConfirmPassword"
                                android:inputType="textPassword"
                                android:hint="example"
                                />
                        </LinearLayout>
                        <ImageView
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/line"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp">

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <RelativeLayout
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">
                    <TextView
                        android:id="@+id/your_ride_cancel"
                        style="@style/button_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_background"
                        android:text="@string/register"
                        android:textColor="@color/colorWhite"/>
                </RelativeLayout>
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/llProgress_bar_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:elevation="5dp"
            android:padding="5dp" />
    </RelativeLayout>

</RelativeLayout>